Quick fix to h2 elements. Made them change to 2em on smaller displays. Was breaking the screen view on iphone 5

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -488,7 +488,7 @@ footer .footer-below {
 }
 
 @media(max-width:767px) {
-    .portfolio-modal .modal-content h2 {
+    section h2 {
       font-size: 2em;
     }
 }
